Fix checkbox management in component tree

Qt 5.2 introduced a behavior change (QTBUG-40060)
which broke the checkbox management in component tree.
Whenever Qt wants to set PartiallyChecked state
for any node, we toggle the state instead.

Change-Id: I4d8c8300e52b886060395cda86b238a7c1619c3f
Reviewed-by: Niels Weber <niels.weber@theqtcompany.com>